# RAG-Regulation-Compliance

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  answerer.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: index.html
src/: answerer.py  api.py  main.py
src/utils/: __init__.py  embeddings.py  parser.py
tests/: test_answerer.py  test_embeddings.py
