[project]
name = "compliance-rag"
version = "1.0.0"
description = "Real-Time Compliance RAG — Streaming regulatory intelligence with Pathway & Groq"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["compliance", "rag", "pathway", "groq", "regulatory", "llm", "fintech"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
